# audio_editor

./: .gitignore  audio_editor_backend.py  audio_editor_frontend.py  button_box.py  dropdown.py  input_box.py  main.py  pyproject.toml  readme.md  requirements.txt
backend/: audio_editor_backend.py
frontend/: audio_editor_frontend.py
frontend/GUI_elements/: input_box.py
tests/: tests.py
