[tool.poetry]
name = "audio_editor"
version = "1.0.0"
description = ""
authors = ["JustASpace"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.9"
ruff = "^0.1.3"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F401"]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
