[tool.poetry]
name = "audio_editor"
version = "1.0.0"
description = ""
authors = ["JustASpace"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.5.2"
flake8 = "^6.1.0"
flake8-bugbear = "^23.9.16"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
